# lite6

./: CMakeLists.txt  ReadMe.md  package.xml
cad_files/: Kirigami_gripper_allstl_gazebo.SLDASM  Kirigami_gripper_gazebo.SLDASM  Lite 6.SLDASM  M6_10_bolt.SLDPRT  finger.SLDPRT  finger_collision.SLDPRT  finger_inertia_cal.SLDPRT  kirigami_gripper_base.SLDPRT  kirigami_gripper_base_collision.SLDPRT  measure_ball.SLDPRT  ufactory_lite6_connector.SLDPRT  ufactory_lite6_connector.STL
config/: fake_controllers.yaml  joint_limits.yaml  kirigami_gripper_finger_distance_measure.yaml  kirigami_gripper_params.yaml  lite6.srdf  lite6_params.yaml  lite6_with_kirigami_gripper_controller.yaml  moveit_controllers.yaml
experiment_data/: real_expt.bag
launch/: fake_moveit_controller_manager.launch.xml  kirigami_gripper.rviz  kirigami_gripper_rviz.launch  lite6_moveit_controller_manager.launch.xml  lite6_with_kirigami_gripper.rviz  lite6_with_kirigami_gripper_control.launch  lite6_with_kirigami_gripper_gazebo.launch  lite6_with_kirigami_gripper_moveit.launch  lite6_with_kirigami_gripper_moveit.rviz  lite6_with_kirigami_gripper_planner.rviz  lite6_with_kirigami_gripper_rviz.launch  move_group.launch  moveit_planner_realHW.launch  moveit_planner_sim.launch  moveit_realHW_configurations.launch  moveit_rviz.launch  moveit_rviz_common.launch  moveit_sim_configurations.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  realHW_exec.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
meshes/collision/: finger_1.STL  finger_2_collision.STL  finger_3.STL  kirigami_gripper_base_collision.STL
meshes/visual/: finger_2.STL  kirigami_gripper_all.STL  kirigami_gripper_base.STL  measure_ball.STL
srdf/: _lite6_macro.srdf.xacro  _lite6_macro.srdf2.xacro  xarm.srdf.xacro  xarm.srdf2.xacro  xarm_macro.srdf.xacro  xarm_macro.srdf2.xacro
urdf/: common.gazebo.xacro  kirigami_gripper.gazebo.xacro  kirigami_gripper.transmission.xacro  kirigami_gripper.urdf.xacro  kirigami_gripper_model.xacro  kirigami_gripper_model2.xacro  kirigami_gripper_test.gazebo.xacro  kirigami_gripper_test.urdf.xacro  lite6.urdf.xacro  lite6_robot.urdf.xacro  lite6_robot_macro.xacro  lite6_with_kirigami_gripper.xacro  lite6_with_kirigami_gripper2.xacro
